Add volume permission check on startup for Radarr and Readarr

--- a/charts/radarr/templates/deployment.yaml
+++ b/charts/radarr/templates/deployment.yaml
@@ -29,26 +29,6 @@ spec:
       serviceAccountName: {{ include "common.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if .Values.volumePermissions.enabled }}
-      initContainers:
-        - name: volume-permissions
-          image: "{{ .Values.volumePermissions.image.repository }}:{{ .Values.volumePermissions.image.tag }}"
-          imagePullPolicy: {{ .Values.volumePermissions.image.pullPolicy }}
-          command:
-            - /bin/sh
-            - -c
-            - |
-              chown -R {{ .Values.podSecurityContext.runAsUser }}:{{ .Values.podSecurityContext.fsGroup }} /config /media /downloads
-          securityContext:
-            runAsUser: {{ .Values.volumePermissions.securityContext.runAsUser }}
-          volumeMounts:
-            {{- range $name, $persistence := .Values.persistence }}
-            {{- if $persistence.enabled }}
-            - name: {{ $name }}
-              mountPath: {{ $persistence.mountPath }}
-            {{- end }}
-            {{- end }}
-      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -174,4 +154,36 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
+      {{- end }}
+
+      {{- if .Values.volumePermissions.enabled }}
+      initContainers:
+        - name: volume-permissions
+          image: "{{ .Values.volumePermissions.image.repository }}:{{ .Values.volumePermissions.image.tag }}"
+          imagePullPolicy: {{ .Values.volumePermissions.image.pullPolicy }}
+          command:
+            - /bin/sh
+            - -c
+            - |
+              echo "Checking volume access..."
+              # Verify read/write access to each enabled volume
+              {{- range $name, $persistence := .Values.persistence }}
+              {{- if $persistence.enabled }}
+              echo "Testing access to {{ $persistence.mountPath }}..."
+              touch "{{ $persistence.mountPath }}/.permissions_test" && \
+                rm "{{ $persistence.mountPath }}/.permissions_test" || \
+                echo "Warning: Could not write to {{ $persistence.mountPath }}"
+              {{- end }}
+              {{- end }}
+              echo "Volume access check completed"
+          securityContext:
+            runAsUser: {{ .Values.volumePermissions.securityContext.runAsUser }}
+            runAsGroup: {{ .Values.volumePermissions.securityContext.runAsGroup }}
+          volumeMounts:
+            {{- range $name, $persistence := .Values.persistence }}
+            {{- if $persistence.enabled }}
+            - name: {{ $name }}
+              mountPath: {{ $persistence.mountPath }}
+            {{- end }}
+            {{- end }}
       {{- end }}
