Add PUID and PGID env variables with default values

--- a/charts/sonarr/templates/deployment.yaml
+++ b/charts/sonarr/templates/deployment.yaml
@@ -69,6 +69,10 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           
           env:
+            - name: PUID
+              value: {{ .Values.podSecurityContext.runAsUser | default 1000 | quote }}
+            - name: PGID
+              value: {{ .Values.podSecurityContext.runAsGroup | default 1000 | quote }}
             {{- range $i, $val := .Values.env }}
             {{- if $val.value }}
             - name: {{ $val.name | quote }}
