--- a/charts/radarr/templates/deployment.yaml
+++ b/charts/radarr/templates/deployment.yaml
@@ -12,7 +12,12 @@ spec:
     matchLabels:
       {{- include "common.selectorLabels" . | nindent 6 }}
   strategy:
-    type: {{ .Values.strategyType | default "RollingUpdate" }}
+    type: {{ .Values.strategyType }}
+    {{- if eq .Values.strategyType "RollingUpdate" }}
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    {{- end }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
