Update fava chart version to 0.8.1 and add revision limit

--- a/charts/fava/templates/deployment.yaml
+++ b/charts/fava/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "fava.labels" . | nindent 4 }}
 spec:
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
