Set revisionHistoryLimit for all deployments to 3

--- a/charts/code-server/values.yaml
+++ b/charts/code-server/values.yaml
@@ -4,6 +4,9 @@
 
 replicaCount: 1
 
+# Number of old ReplicaSets to retain for rollback purposes
+revisionHistoryLimit: 3
+
 image:
   repository: codercom/code-server
   tag:
@@ -143,7 +146,7 @@ lifecycle:
   #      - curl -s -L SOME_SCRIPT | bash
 
 ## Enable an Specify container in extraContainers.
-## This is meant to allow adding code-server dependencies, like docker-dind.
+## This is meant to allow adding code-server dependencies, like docker-dind.
 extraContainers: |
 # If docker-dind is used, DOCKER_HOST env is mandatory to set in "extraVars"
 #- name: docker-dind
