--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -1,5 +1,8 @@
 replicaCount: 1
 
+# Number of old ReplicaSets to retain for rollback purposes
+revisionHistoryLimit: 3
+
 image:
   repository: lscr.io/linuxserver/sonarr
   pullPolicy: IfNotPresent
