--- a/charts/sabnzbd/values.yaml
+++ b/charts/sabnzbd/values.yaml
@@ -15,6 +15,12 @@ fullnameOverride: ''
 
 strategyType: RollingUpdate
 
+# -- Init containers to add to the pod
+initContainers: []
+# - name: init-myservice
+#   image: busybox:1.28
+#   command: ['sh', '-c', "until nslookup myservice.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for myservice; sleep 2; done"]
+
 serviceAccount:
   # Specifies whether a service account should be created
   create: true
