--- a/charts/calibre/values.yaml
+++ b/charts/calibre/values.yaml
@@ -31,13 +31,8 @@ podSecurityContext:
   # fsGroup: 2000
 
 securityContext:
-  {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  seccompProfile:
+    type: Unconfined
 
 service:
   type: ClusterIP
