feat: add Deployment annotations support to all charts
- Add annotations field to Deployment metadata in all 11 charts
- Support for Argo CD, Flux, and other GitOps tools
- Add annotations: {} configuration in all values.yaml files
- Bump minor versions across all charts (following semver)

Charts updated:
- calibre: 1.0.1 → 1.1.0
- calibre-web: 0.1.1 → 0.2.0
- code-server: 3.32.1 → 3.33.0
- fava: 0.12.1 → 0.13.0
- lazylibrarian: 0.1.1 → 0.2.0
- paperless: 0.15.1 → 0.16.0
- radarr: 0.25.0 → 0.26.0
- readarr: 0.5.4 → 0.6.0
- sabnzbd: 0.6.4 → 0.7.0
- sonarr: 0.5.1 → 0.6.0
- uptime-kuma: 0.2.0 → 0.3.0

--- a/charts/calibre-web/templates/deployment.yaml
+++ b/charts/calibre-web/templates/deployment.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "common.fullname" . }}
   labels:
     {{- include "common.labels" . | nindent 4 }}
+  {{- with .Values.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   {{- if not .Values.autoscaling.enabled }}
