--- a/charts/fava/values.yaml
+++ b/charts/fava/values.yaml
@@ -17,6 +17,9 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
+# Annotations to add to the Deployment resource
+annotations: {}
+
 strategyType: RollingUpdate
 
 serviceAccount:
@@ -30,12 +33,10 @@ serviceAccount:
 
 podAnnotations: {}
 
-podSecurityContext:
-  {}
+podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext:
-  {}
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -50,8 +51,7 @@ service:
 ingress:
   enabled: false
   className: ''
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -117,8 +117,7 @@ probes:
       periodSeconds: 5
       failureThreshold: 30
 
-resources:
-  {}
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
