--- a/charts/calibre/values.yaml
+++ b/charts/calibre/values.yaml
@@ -13,6 +13,9 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
+# Annotations to add to the Deployment resource
+annotations: {}
+
 strategyType: RollingUpdate
 
 serviceAccount:
