--- a/charts/lazylibrarian/values.yaml
+++ b/charts/lazylibrarian/values.yaml
@@ -13,6 +13,9 @@ imagePullSecrets: []
 nameOverride: ''
 fullnameOverride: ''
 
+# Annotations to add to the Deployment resource
+annotations: {}
+
 # -- Using Recreate strategy because:
 # - The config volume contains a SQLite database
 # - SQLite requires exclusive write access
