Remove Bitnami PostgreSQL subchart from paperless chart
Drops the bundled postgresql dependency entirely and replaces the
postgresql.enabled toggle with a first-class database: section.
Users configure external databases directly rather than relying on
the chart to provision one.

- engine: sqlite (default) — no extra config needed
- engine: postgresql — set host/port/name/user and either a
  plain-text password or an existingSecret reference

BREAKING CHANGE: postgresql.enabled is removed. Set
database.engine: postgresql and supply connection details.

Bumps chart version 0.17.4 → 0.18.0

--- a/charts/paperless/templates/deployment.yaml
+++ b/charts/paperless/templates/deployment.yaml
@@ -86,21 +86,28 @@ spec:
             {{- end }}
             {{- end }}
 
-            {{- if .Values.postgresql.enabled }}
-            {{- with .Values.postgresql }}
-            - name: PAPERLESS_DBENGINE 
+            {{- if eq .Values.database.engine "postgresql" }}
+            {{- with .Values.database.postgresql }}
+            - name: PAPERLESS_DBENGINE
               value: postgresql
-            - name: PAPERLESS_DBHOST 
-              value: {{ $.Release.Name }}-postgresql
-            - name: PAPERLESS_DBNAME 
-              value: {{ .auth.database }}
-            - name: PAPERLESS_DBUSER 
-              value: {{ default "postgres" .auth.username }}
+            - name: PAPERLESS_DBHOST
+              value: {{ .host | quote }}
+            - name: PAPERLESS_DBPORT
+              value: {{ .port | quote }}
+            - name: PAPERLESS_DBNAME
+              value: {{ .name | quote }}
+            - name: PAPERLESS_DBUSER
+              value: {{ .user | quote }}
+            {{- if .existingSecret.name }}
             - name: PAPERLESS_DBPASS
               valueFrom:
                 secretKeyRef:
-                  name: {{ $.Release.Name }}-postgresql
-                  key: {{ if not .auth.password }}postgres-{{ end }}password
+                  name: {{ .existingSecret.name }}
+                  key: {{ .existingSecret.key | default "password" }}
+            {{- else if .password }}
+            - name: PAPERLESS_DBPASS
+              value: {{ .password | quote }}
+            {{- end }}
             {{- end }}
             {{- end }}
 
