Add extraVolumes and extraVolumeMounts support to paperless chart
Some deployment environments need to overlay specific subdirectories
inside the NFS-backed storage volume with ephemeral storage (e.g.
mounting an emptyDir at data/log to avoid NFS permission issues with
lock files). The hardcoded volume configuration made this impossible.

Bumps chart to 0.19.0.

--- a/charts/paperless/templates/deployment.yaml
+++ b/charts/paperless/templates/deployment.yaml
@@ -143,6 +143,9 @@ spec:
               subPath: consume
             {{- end }}
           {{- end }}
+          {{- with .Values.extraVolumeMounts }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
             
           
       {{- with .Values.persistence }}
@@ -174,7 +177,9 @@ spec:
           emptyDir: {}
         {{- end }}
 
-
+      {{- end }}
+      {{- with $.Values.extraVolumes }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
 
       {{- with .Values.affinity }}
